# smfe

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  support_smfe.cmake
3rd/aquila/lib/: Aquila_release.lib  Ooura_fft_release.lib
3rd/aquila/lib/debug/: Ooura_fft.lib
3rd/armadillo/include/armadillo_bits/: config.hpp
3rd/fftw/: README.md
3rd/fftw/lib/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
3rd/wavelet2d/example/: README.txt
3rd/wavelet2d/include/: wavelet2d.h
3rd/wavelet2d/src/: wavelet2d.cpp
cmake/modules/: support_aquila.cmake  support_fftw.cmake
doc/: smfe-features-introduction.md
doc/1.3/: sm-features.chm
doc/1.3/html/: annotated.html  classes.html  dir_04eed4a94f4250abe14c3961891f3224.html  dir_35f38b3bf2db35fc24c33b6483dbd717.html  dir_36e5647ab97cd43e3f41aeffa06c72c3.html  dir_451a9baa47126199276a324161f2693d.html  dir_fc0a186c712af748aa85c4f05597d909.html  doxygen.css  examples.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.hhc  index.hhk  index.hhp  index.html  modules.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  tabs.css
doc/1.3/html/d0/d7b/: test_time_domain_features_8cpp-example.html
doc/1.3/html/d1/dc6/: frequency__domain__features_8h.html  frequency__domain__features_8h_ac10e6e1a833c4952f1e2d89e93ab70b6.html  frequency__domain__features_8h_source.html
doc/1.3/html/d2/d03/: classsmfe_1_1_s_m_f_e_exception-members.html
doc/1.3/html/d2/d0f/: from__config__file__interface_8h.html  from__config__file__interface_8h_af77cca14848a88670597f7539d30903c.html  from__config__file__interface_8h_source.html
doc/1.3/html/d2/d20/: sensor__features_8cpp.html  sensor__features_8cpp_source.html
doc/1.3/html/d2/d49/: global_8h.html  global_8h_a6ddfcf20e6642a74e6adf344b61a99ce.html  global_8h_ad396fb35a0fef922955d7741203fb0a0.html  global_8h_source.html
doc/1.3/html/d2/d92/: statistic__features_8h.html  statistic__features_8h_af8f04b0877cebcd52aa125d8e9e6bf9f.html  statistic__features_8h_source.html
doc/1.3/html/d2/db4/: ensure__exists_8h.html  ensure__exists_8h_a377ff772f60eabbacc0114b463648710.html  ensure__exists_8h_source.html
doc/1.3/html/d2/dff/: namespacesmfe.html  namespacesmfe_a151e3f25bcb039bb9f8afde8659d29f9.html  namespacesmfe_a24d9f22999549e8e9f054a170f38f3d2.html  namespacesmfe_a39deb75fb7bb7833e7de1865e792e91e.html  namespacesmfe_a43cd5321773eff386705f1531b2cf732.html  namespacesmfe_a484b9dee78515eaca30a59dcd66acaa4.html  namespacesmfe_a4b903cb2baaaafa664e74d826da575db.html  namespacesmfe_a71021c3d8019254e7e11fd689d031d31.html  namespacesmfe_a7a0faddc02f288642a74d833954d90cb.html  namespacesmfe_a7c767f92bdfc2cc8f8ff86c65e2255a3.html  namespacesmfe_a82a2225c718b2c7a3064f9bd18aeb8fc.html  namespacesmfe_a8a27d2afa17a4c2058e2af1a40f6616d.html  namespacesmfe_a997294befb9db8b9f2da97d5471db659.html  namespacesmfe_aa0e6a9a31e542daf577112037e0ec513.html  namespacesmfe_aa64d32880ad5e331a56fa02051ad14d7.html  namespacesmfe_aa7e09e5282407c1ccec49ffaedaac71e.html  namespacesmfe_ac5ce38d6082481ba531e435479d1e6ac.html  namespacesmfe_ad05e0b1cc0d9a1394b1cf7974bd945a1.html  namespacesmfe_adcdc37a8451a5d27aa29f6a4dda4e25f.html  namespacesmfe_af18060b8c6de1473c86f728c43643b22.html  namespacesmfe_afbf9ca68bf2dd0171bbefc166e3a05c4.html
doc/1.3/html/d3/d8b/: test_frequency_domain_features_8cpp-example.html
doc/1.3/html/d4/d7c/: group__frefeatures.html  group__frefeatures_ga1a31dc78fd5fcdd9d968aa30371f4c31.html  group__frefeatures_ga207fe1af7e5ef4f563828e245c2e2b4c.html  group__frefeatures_ga2dc37c635ce2eb5a53288aae23696e52.html  group__frefeatures_ga535af906d4978cb91e0d388d35706601.html  group__frefeatures_ga5502c6be8dffd7eb656fca34ebe0ffbd.html  group__frefeatures_ga6bd91b91a93d5f1e97c54ca3483596f3.html  group__frefeatures_ga8e4437c173a63dec49f7862eb12a0262.html  group__frefeatures_ga92714aa384b5dd366dbc499f92f09813.html  group__frefeatures_ga99db1ec3686aa6ea84abbaefecfb6d4a.html  group__frefeatures_ga9f9b9371569c828135190e1b23d58ecb.html  group__frefeatures_gadee66a42f7a4af8950b36829db4c167e.html  group__frefeatures_gaf1b27e7bef1fd0fbf1409cc1dae07f16.html
doc/1.3/html/d4/dcb/: mean__filter_8cpp.html  mean__filter_8cpp_source.html
doc/1.3/html/d5/d65/: classsmfe_1_1_from_config_file_interface-members.html
doc/1.3/html/d5/deb/: time__domain__features_8h.html  time__domain__features_8h_a0e89e4c32932df40d861a30189348eca.html  time__domain__features_8h_source.html
doc/1.3/html/d6/d23/: config__global_8h.html  config__global_8h_af8a64e5464d8d38bf59d24d78abf08ff.html  config__global_8h_source.html
doc/1.3/html/d6/d44/: test_statistics_features_8cpp-example.html
doc/1.3/html/d6/d8e/: group__tdfeatures.html  group__tdfeatures_ga139f06df455945853f6f741fa55602d8.html  (+11 more)
include/smfe/: common_function.h  config_global.h  frequency_domain_features.h  global.h  integral_calculus.h  sensor_global.h  statistic_features.h  time_domain_features.h  time_domain_features.hpp
include/smfe/config/: config_global.h  ensure_exists.h  from_config_file_interface.h
include/smfe/feature/: frequency_domain_features.h  integral_calculus.h  mean_filter.h  sensor_features.h  sensor_features.hpp  statistic_features.h  time_domain_features.h  time_domain_features.hpp  wavelet_features.h
src/: CMakeLists.txt  common_function.cpp  frequency_domain_features.cpp  integral_calculus.cpp  mean_filter.cpp  sensor_features.cpp  statistic_features.cpp  statistic_function.cpp  time_domain_features.cpp  wavelet_features.cpp
test/: CMakeLists.txt  main.cpp  smfe_test_config.h.in  test_common_function.cpp  test_frequency_domain_features.cpp  test_sensor_features.cpp  test_statistics_features.cpp  test_time_domain_features.cpp  test_time_domain_featurs.cpp  test_wavelet_features.cpp  wavelet_name.cpp
test_using_smfe/: CMakeLists.txt  build.nmake.release.bat  test.cpp
(+96 files in other folders)
